Business card done

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -134,7 +134,7 @@
       <div class="jumbotron" id="section-event-solutions">
         <div class="container">
           <div class="row">
-            <div class="span4 hidden-phone">
+            <div class="span4 hidden-phone calendar">
               {{ "calendar-icon.png" || theme_image_tag }}
             </div>
             <div class="span8">
@@ -148,7 +148,16 @@
 
           <div class="row">
             <div class="span8">
-              {{ "business-card.png" | theme_image_tag }}
+              <div class="business-card">
+                <h3>
+                  Tristan Verdier
+                  <span class="icon-write"></span>
+                </h3>
+                <span class="card-info email">Email: tristan.verdier@gmail.com</span><br />
+                <span class="card-info phone">Phone: 123 456 789</span><br />
+                <span class="card-info company">Society: Applidget</span><br />
+                <span class="card-info position">Position: Some</span>
+              </div>
             </div>
             <div class="span4">
               <span class="info success">You will attend</span>
