--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -132,40 +132,7 @@
       </div>
 
       <div class="jumbotron" id="section-event-solutions">
-        <div class="container">
-          <div class="row">
-            <div class="span4 hidden-phone calendar">
-              {{ "calendar-icon.png" || theme_image_tag }}
-            </div>
-            <div class="span8">
-              <h1>
-              {% editable_short_text "conferences_title", hint: "Conferences Title", priority: 80 %}
-                Event Solutions
-              {% endeditable_short_text %}
-              </h1>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="span8">
-              <div class="business-card">
-                <h3>
-                  Tristan Verdier
-                  <span class="icon-write"></span>
-                </h3>
-                <span class="card-info email">Email: tristan.verdier@gmail.com</span><br />
-                <span class="card-info phone">Phone: 123 456 789</span><br />
-                <span class="card-info company">Society: Applidget</span><br />
-                <span class="card-info position">Position: Some</span>
-              </div>
-            </div>
-            <div class="span4">
-              <span class="info success">You will attend</span>
-              <span class="info yes">Yes</span>
-              <span class="info maybe">Maybe</span>
-            </div>
-          </div>
-        </div>
+        {% include 'event_solutions' %}
       </div>
       
     {% endblock %}
