Editable Sections added

--- a/app/views/snippets/event_solutions.liquid
+++ b/app/views/snippets/event_solutions.liquid
@@ -16,22 +16,40 @@
     <div class="span8">
       <div class="business-card">
         <h3>
-          Tristan Verdier
+          {% editable_short_text "business_card_name", hint: "Business Card Name", priority: 78 %}
+            Tristan Verdier
+          {% endeditable_short_text %}
           <span class="icon-write"></span>
         </h3>
-        <span class="card-info email">Email: tristan.verdier@gmail.com</span><br />
-        <span class="card-info phone">Phone: 123 456 789</span><br />
-        <span class="card-info company">Society: Applidget</span><br />
-        <span class="card-info position">Position: Some</span>
+        {% editable_long_text "business_card_info", hint: "Business Card Info", priority: 76 %}
+          <span class="card-info email">Email: tristan.verdier@gmail.com</span><br />
+          <span class="card-info phone">Phone: 123 456 789</span><br />
+          <span class="card-info company">Society: Applidget</span><br />
+          <span class="card-info position">Position: Some</span>
+        {% endeditable_long_text %}
       </div>
     </div>
     <div class="span4">
-      <span class="info success">You will attend</span>
-      <span class="info yes">Yes</span>
-      <span class="info maybe">Maybe</span>
+      <span class="info success">
+        {% editable_short_text "you_will_attend", hint: "You will attend", priority: 75 %}
+          You will attend
+        {% endeditable_short_text %}
+      </span>
+      <span class="info yes">
+        {% editable_short_text "attend_yes", hint: "Yes", priority: 74 %}
+          Yes
+        {% endeditable_short_text %}
+      </span>
+      <span class="info maybe">
+        {% editable_short_text "attend_maybe", hint: "Maybe", priority: 73 %}
+          Maybe
+        {% endeditable_short_text %}
+      </span>
       <span class="info credits">
-        Organized by <strong>Someone</strong><br />
-        Powered by Applidget
+        {% editable_short_text "powered_text", hint: "Powered by Applidget", priority: 72 %}
+          Organized by Someone<br />
+          Powered by Applidget
+        {% endeditable_short_text %}
       </span>
     </div>
   </div>
