--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -134,6 +134,10 @@
       <div class="jumbotron" id="section-event-solutions">
         {% include 'event_solutions' %}
       </div>
+
+      <div class="jumbotron" id="section-team">
+        {% include 'team' %}
+      </div>
       
     {% endblock %}
 
