--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -214,7 +214,7 @@ body {
 }
 
 #section-event-solutions {
-  background: #eae4d6 url('/images/sunrise-effect-light.png') no-repeat top center;
+  background: #eae4d6 url('/images/sunrise-effect-light.png') repeat-x top center;
   margin-top: 0px;
   text-shadow: 1px 1px 3px #FFFFFF;
 
@@ -330,6 +330,44 @@ body {
   display: block;
   position: absolute;
   background: url('/images/dented-events.png') repeat-x top left;
+  top: -5px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+#section-team {
+  background: #e5e5e5 url('/images/team-bg.png') repeat-x top center;
+  margin-top: 0px;
+  text-shadow: 1px 1px 3px #707070;
+
+  h1 {
+    margin-top: 75px;
+  }
+
+  .headshots, .white-screen { 
+    margin-bottom: 20px; 
+  }
+
+  .white-screen {
+    padding-top: 20px;
+  }
+
+  .team-bloc {
+    min-height: 350px;
+    color: #8d8d8d;
+    text-shadow: none;
+    background-color: #FFFFFF;
+    @include border-radius(4px);
+    @include box-shadow(inset 0 0 6px #8D8D8D);
+  }
+}
+
+#section-team:before {
+  content: '';
+  display: block;
+  position: absolute;
+  background: url('/images/dented-team.png') repeat-x top left;
   top: -5px;
   right: 0;
   bottom: 0;
@@ -534,6 +572,17 @@ body {
       margin-bottom: -1px;
     }
   }
+
+  #section-team {
+    h1 {
+      margin-top: 22px;
+      margin-bottom: 45px;
+    }
+
+    .team-bloc {
+      margin-bottom: 10px;
+    }
+  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -555,7 +604,8 @@ body {
   #section-why-choose, 
   #section-technologies, 
   #section-technologies-description,
-  #section-event-solutions {
+  #section-event-solutions,
+  #section-team {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -576,7 +626,7 @@ body {
     h1 {
       margin-bottom: 30px;
     }
-    
+
     .business-card {
       padding: 20px;
     }
