--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -18,19 +18,37 @@
   <div class="row">
     <div class="span4 team-bloc">
       <div class="padding20">
-        Our Team
+        <span class="bloc-title">Our Team</span>
+
+        <span class="bloc-section-title">Tristan Verdier</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+
+        <span class="bloc-section-title">John Doe</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
       </div>
     </div>
 
     <div class="span4 team-bloc">
       <div class="padding20">
-        Join Us
+        <span class="bloc-title">Join Us</span>
+
+        <span class="bloc-section-title">UI/UX Designer</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+
+        <span class="bloc-section-title">Ruby Developer</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
       </div>
     </div>
 
     <div class="span4 team-bloc">
       <div class="padding20">
-        Last Open Positions
+        <span class="bloc-title">Last Open Positions</span>
+
+        <span class="bloc-section-title">Some Designer</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+
+        <span class="bloc-section-title">HTML5 Developer</span>
+        <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
       </div>
     </div>
   </div>
