Editable text sections added

--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -18,37 +18,55 @@
   <div class="row">
     <div class="span4 team-bloc">
       <div class="padding20">
-        <span class="bloc-title">Our Team</span>
+        <span class="bloc-title">
+          {% editable_short_text "our_team_title", hint: "Our Team Title", priority: 68 %}
+            Our Team
+          {% endeditable_short_text %}
+        </span>
 
+        <!-- This content is supposed to be loaded from a collection in the end -->
         <span class="bloc-section-title">Tristan Verdier</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
         <span class="bloc-section-title">John Doe</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+        <!-- End content -->
       </div>
     </div>
 
     <div class="span4 team-bloc">
       <div class="padding20">
-        <span class="bloc-title">Join Us</span>
+        <span class="bloc-title">
+          {% editable_short_text "join_us_title", hint: "Join Us Title", priority: 66 %}
+            Join Us
+          {% endeditable_short_text %}
+        </span>
 
+        <!-- This content is supposed to be loaded from a collection in the end -->
         <span class="bloc-section-title">UI/UX Designer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
         <span class="bloc-section-title">Ruby Developer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+        <!-- End content -->
       </div>
     </div>
 
     <div class="span4 team-bloc">
       <div class="padding20">
-        <span class="bloc-title">Last Open Positions</span>
+        <span class="bloc-title">
+          {% editable_short_text "last_open_positions_title", hint: "Last Open Positions Title", priority: 64 %}
+            Last Open Positions
+          {% endeditable_short_text %}
+        </span>
 
+        <!-- This content is supposed to be loaded from a collection in the end -->
         <span class="bloc-section-title">Some Designer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
         <span class="bloc-section-title">HTML5 Developer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+        <!-- End content -->
       </div>
     </div>
   </div>
