Integration almost done

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -138,6 +138,10 @@
       <div class="jumbotron" id="section-team">
         {% include 'team' %}
       </div>
+
+      <div class="jumbotron" id="section-blogs">
+        {% include 'blogs' %}
+      </div>
       
     {% endblock %}
 
